--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "author": "Pedro Serra",
     "license": "ISC",
     "dependencies": {
-        "debounce": "^1.2.0"
+        "debounce": "^1.2.0",
+        "mdn-polyfills": "^5.18.0"
     },
     "devDependencies": {
         "babel-core": "^6.26.3",
-        "babel-loader": "^8.0.6",
+        "babel-loader": "^7.1.5",
         "babel-preset-env": "^1.7.0",
         "webpack": "^4.35.3",
         "webpack-cli": "^3.3.5",
